--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "host": "ng serve --host=0.0.0.0 --disable-host-check"
   },
   "private": true,
   "dependencies": {
@@ -18,15 +19,22 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "@types/three": "^0.160.0",
     "rxjs": "~7.8.0",
+    "save": "^2.9.0",
+    "three": "^0.160.0",
     "tslib": "^2.3.0",
+    "tweakpane": "^4.0.3",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.0.6",
     "@angular/cli": "^17.0.6",
     "@angular/compiler-cli": "^17.0.0",
+    "@tweakpane/core": "^2.0.3",
+    "@types/dat.gui": "^0.7.12",
     "@types/jasmine": "~5.1.0",
+    "dat.gui": "^0.7.9",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
